Fix img size on small landscape devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,13 @@ main#main > div#card > img {
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
+@media screen and (orientation: landscape) {
+	main#main > div#card > img {
+		height: 40vh !important;
+		width: 40vh !important;
+	}
+}
+
 @media screen and (min-width: 430px) {
 	main#main > div#card > img {
 		width: 50vw;
@@ -74,10 +81,24 @@ main#main > div#card > img {
 	}
 }
 
+@media screen and (orientation: landscape) and (min-height: 600px) {
+	main#main > div#card > img {
+		height: 40vh !important;
+		width: 40vh !important;
+	}
+}
+
 @media screen and (min-width: 768px) {
 	main#main > div#card > img {
 		width: 280px;
 		height: 280px;
+	}
+}
+
+@media screen and (orientation: landscape) and (min-height: 800px) {
+	main#main > div#card > img {
+		height: 280px !important;
+		width: 280px !important;
 	}
 }
 
@@ -89,6 +110,13 @@ main#main > div#card > h1 {
 	text-align: center;
 	color: white;
 	font-style: italic;
+}
+
+@media screen and (orientation: landscape) and (max-width: 768px) {
+	main#main > div#card > h1 {
+		margin-top: 20px !important;
+		margin-bottom: 20px !important;
+	}
 }
 
 @media screen and (min-width: 600px) {
